# scash-miner-android

./: .gitignore  gradlew  settings.gradle
.github/workflows/: build-apk.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/scash/miner/: MainActivity.java
app/src/main/jni/: CMakeLists.txt  scashminer.cpp
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  spinner_dropdown_item.xml  spinner_item.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
